Create new entity for DailyCalls data

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -8,7 +8,8 @@
       "entities": {
         "main": "Entities",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
-        "numberOfHours": "Number Of Hours"
+        "numberOfHours": "Number Of Hours",
+        "dailyCalls": "Daily Calls"
       },
       "account": {
         "main": "Account",
