--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -9,7 +9,8 @@
         "main": "Entidades",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
         "numberOfHours": "Number Of Hours",
-        "dailyCalls": "Daily Calls"
+        "dailyCalls": "Daily Calls",
+        "dailyChats": "Daily Chats"
       },
       "account": {
         "main": "Cuenta",
