--- a/src/main/webapp/i18n/es/register.json
+++ b/src/main/webapp/i18n/es/register.json
@@ -13,7 +13,7 @@
           "pattern": "Su nombre de usuario no es válido."
         }
       },
-      "success": "<strong>¡Registro guardado!</strong> Por favor, revise su correo electrónico para confirmar.",
+      "success": "<strong>¡Registro guardado!</strong> Por favor, informe a su administrador para que este pueda activar su cuenta.",
       "error": {
         "fail": "<strong>¡El registro ha fallado!</strong> Por favor, inténtelo de nuevo más tarde.",
         "userexists": "<strong>¡El nombre de usuario ya está registrado!</strong> Por favor, escoja otro usuario.",
