Add metrics page for Daily Calls entity

--- a/src/main/webapp/i18n/ca/dailyCalls.json
+++ b/src/main/webapp/i18n/ca/dailyCalls.json
@@ -20,6 +20,9 @@
         "button": "Afegeix un fitxer",
         "infoText": "Carregueu el fitxer Excel amb les dades de les trucades diàries"
       },
+      "metrics": {
+        "title": "Daily Calls Metrics"
+      },
       "id": "ID",
       "day": "Day",
       "totalDailyReceivedCalls": "Total Daily Received Calls",
