--- a/src/main/webapp/i18n/fr/dailyCalls.json
+++ b/src/main/webapp/i18n/fr/dailyCalls.json
@@ -20,6 +20,9 @@
         "button": "Ajouter le fichier",
         "infoText": "Téléchargez le fichier Excel avec les données des appels quotidiens"
       },
+      "metrics": {
+        "title": "Daily Calls Metrics"
+      },
       "id": "ID",
       "day": "Day",
       "totalDailyReceivedCalls": "Total Daily Received Calls",
